--- a/pages/main/main.wxss
+++ b/pages/main/main.wxss
@@ -31,21 +31,20 @@
   height: 100%;
   width: 100%;
 }
-.weui-grid {
-  width: 50%;
-}
+
 .longgrid{
   height: 280rpx;
-  margin: 10px;
+  margin: 5px 0;
 }
 .shortgrid{
   height: 220rpx;
-  margin: 10px;
+  margin: 5px 0;
 }
 
 
 .weui-grid{
   width: 100%;
+  background: #fff;
 }
 
 .mainTitle{
@@ -58,4 +57,8 @@
 
 .weui-grid__label{
   color: #095983;
+}
+
+.weui-flex__item{
+  margin:  0 5px;
 }
