--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -99,5 +99,34 @@
     </view> -->
 
     <button class="sureBtn" bindtap="seatchProduct">查询航班</button>
+
+  <!-- 航班列表 -->
+  <view class="weui-cells__title">已添加的航班提醒</view>
+  <view class="weui-cells weui-cells_after-title">
+    <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+      <view class="weui-cell__hd">
+        <view class="date">2018/3/12</view>
+        <view class="time">8:00</view>
+        <view class="date">西安咸阳</view>
+      </view>
+      <view class="weui-cell__bd ">
+        <view style="width: 6.3rem">
+          <view class="date flight">东方航空MU1234</view>
+          <view class="time">
+            <image src="../../images/cxarrow.png" class="arrow"></image>
+          </view>
+          <view class="date plan">计划起飞</view>
+        </view>
+        <view style="display: flex;flex-direction: column;justify-content:space-between;">
+          <view class="date" style="text-align: right;width: 4.3rem">2018/3/12</view>
+          <view class="time" style="text-align: right;width: 4.3rem">10:23</view>
+          <view class="date" style="text-align: right;width: 4.3rem">北京首都</view>
+        </view>
+      </view>
+      <view >
+        <view class="inner">提醒中</view>
+      </view>
+    </navigator>
+  </view>
   </view>
 </view>
