--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -15,7 +15,7 @@
         <view class="smlabeldark to">到达地</view>
       </view>
   		<view class="citySelect">
-  			<view class="startCity" bindtap="selectCity">{{startCity}}</view>
+  			<view class="startCity" >{{startCity}}</view>
   			<view class="citySelect_img">
   				<image class="samll_plane" src="../../images/cxplan.png"></image>
   			</view>
