--- a/pages/switchcity/switchcity.wxml
+++ b/pages/switchcity/switchcity.wxml
@@ -8,14 +8,14 @@
         <view style="margin-top:0;">当前</view>
         <view style="margin-top:0;">热门</view>
       </view>
-      <view wx:for="{{searchLetter}}" style="color:#2ab4ff;font-size:20rpx;" wx:key="index" data-letter="{{item.name}}" catchtouchend="clickLetter" >{{item.name}}</view>
+      <view wx:for="{{searchLetter}}" style="color:#015f89;font-size:20rpx;" wx:key="index" data-letter="{{item.name}}" catchtouchend="clickLetter" >{{item.name}}</view>
     </view>
     <block wx:if="{{isShowLetter}}">
       <view class="showSlectedLetter">
         {{showLetter}}
       </view>
     </block>
-    <scroll-view scroll-y="true" style="height:{{winHeight}}px" bindscroll="bindScroll" 
+    <scroll-view scroll-y="true" style="height:{{winHeight}}px;background: #fff" bindscroll="bindScroll" 
     scroll-into-view="{{scrollTopId}}" scroll-top="{{scrollTop}}">
     <view class="hotcity-common thisCity">当前选择城市</view>
     <view class="thisCityName">{{city}}</view>
