--- a/pages/index/flightDetail/flightDetail.wxss
+++ b/pages/index/flightDetail/flightDetail.wxss
@@ -19,3 +19,291 @@
 .usermotto {
   margin-top: 200px;
 }
+
+.mainTitle{
+	width: 100%;
+	background: #015f89;
+	color: #fff;
+	text-align: center;
+	padding-top: 60rpx;
+}
+
+.container {
+  height: 100vh;
+  background: #fff;
+}
+
+.pd-70 {
+  padding: 0 1.867rem;
+}
+
+.wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  border-top: 2rpx solid #e1e1e1;
+  margin: 2rpx 0 0 0 ;
+}
+
+.btn {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  font-size: 32rpx;
+  justify-content: center;
+  border-bottom: 2rpx solid #e1e1e1;
+  background: #fff;
+}
+
+.btn view {
+  width: 40%;
+  height: 2rem;
+  line-height: 2rem;
+  text-align: center;
+  font-weight: 500;
+}
+
+.btn view.active {
+  color: #cf4227;
+  border-bottom: 5rpx solid #cf4227;
+}
+
+.chooseCity {
+  box-sizing: border-box;
+  padding-top: 0.96rem;
+  background-color: #fff;
+  border-bottom: 1rpx solid #015f89;
+  overflow: hidden;
+}
+
+.pdt-0 {
+  padding-top: 0;
+}
+
+.chooseCity .citySelect {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 2.667rem;
+  line-height: 2.667rem;
+  font-size: 42rpx;
+}
+
+.chooseCity .citySelect .hotelCity {
+  width: 100%;
+  border-bottom: 1rpx solid #F0EFF5;
+  color: #4A586A;
+}
+
+.chooseCity .citySelect .startCity {
+  width: 6.187rem;
+  border-bottom: 1rpx solid #F0EFF5;
+  color: #4A586A;
+}
+
+.chooseCity .citySelect .citySelect_img {
+  width: 2.693rem;
+  height: 2.587rem;
+  position: relative;
+  margin-top: -1.3rem;
+}
+
+.chooseCity .citySelect .citySelect_img view {
+  position: absolute;
+  z-index: 99;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+.chooseCity .citySelect .citySelect_img view .changeCity_bg {
+  width: 2.693rem;
+  height: 2.693rem;
+}
+
+.chooseCity .citySelect .citySelect_img .samll_plane {
+  width: 45px;
+  height: 46px;
+  position: absolute;
+  top: 16%;
+  left: 54%;
+  transform: translate(-50%, -50%);
+}
+
+.chooseCity .citySelect .endCity {
+  width: 6.187rem;
+  border-bottom: 1rpx solid #F0EFF5;
+  text-align: right;
+  color: #4A586A;
+}
+
+.chooseDate {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  height: 2.4rem;
+  line-height: 2.4rem;
+}
+
+.date {
+  font-size: 23rpx;
+  margin-right: 1.067rem;
+  color: #898989;
+}
+
+.time{
+  font-size: 65rpx;
+}
+
+.week {
+  color: #929fb1;
+  font-size: 26rpx;
+}
+
+.title {
+  color: #888;
+  width: 100%;
+  height: 2.13rem;
+  line-height: 2.13rem;
+  padding: 0 1rem;
+  border-bottom: 2rpx solid #cececf;
+  font-size: 30rpx;
+}
+
+.person {
+  display: flex;
+  justify-content: space-between;
+  background-color: #fff;
+  height: 1.813333rem;
+  line-height: 1.813333rem;
+  padding: 0.8rem 0.533333rem;
+  border-bottom: 2rpx solid #cececf;
+}
+
+.outer {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  justify-content: center;
+  border: 3rpx solid #a9b1bb;
+  border-radius: 8rpx;
+}
+
+.personNum {
+  display: flex;
+  flex: 1;
+}
+
+.person .ml-30 {
+  margin-left: 0.8rem;
+}
+
+.outer .minus,
+.outer .num,
+.outer .plus {
+  flex: 1;
+  text-align: center;
+}
+
+.outer .num {
+  border-left: 3rpx solid #a9b1bb;
+  border-right: 3rpx solid #a9b1bb;
+}
+
+.text {
+  font-size: 24rpx;
+  color: #536277;
+  margin-right: 0.266667rem;
+}
+
+.person .minus,
+.person .plus {
+  width: 25%;
+  height: 1.813333rem;
+  display: block;
+  text-align: center;
+}
+
+.minus {
+  font-size: 28rpx;
+  line-height: 1.813333rem;
+  font-weight: bold;
+}
+
+.plus {
+  font-size: 48rpx;
+  line-height: 1.6rem;
+}
+
+.tishi {
+  width: 0.8rem;
+  height: 1.813333rem;
+  margin-left: 0.533333rem;
+}
+
+.tishi .tsimg {
+  width: 0.8rem;
+  height: 0.8rem;
+  margin-top: 0.506667rem;
+}
+
+.sureBtn {
+  margin-top: 1.333333rem;
+}
+
+.smlabel {
+  color: #015f89;
+  font-size: 26rpx;
+  width: 3rem;
+}
+.smlabeldark {
+  color: #b2b1b1;
+  font-size: 26rpx;
+  width: 3rem;
+}
+.to {
+  text-align: right;
+}
+
+/*列表*/
+.weui-cells__title {
+  text-align: center;
+}
+
+.weui-cells{
+  background: #f6f6f6;
+  margin: 30rpx 0;
+}
+
+.weui-cell_access{
+
+}
+
+.weui-cell__bd{
+  display: flex;
+  border-right: 1px solid #e1e1e1;
+  margin-right: 10px;
+}
+.flight{
+  color: #cf4227;
+}
+.arrow{
+  width: 100px;
+  height: 15px;
+
+}
+.plan{
+  color: #015f89;
+  font-size: 0.8rem;
+}
+
+
+.warnmsg{
+  width: 80%;
+  margin: 0 auto;
+  color: #cf4227;
+  font-size: 33rpx;
+  line-height: 1.3rem;
+}
