--- a/pages/index/flightDetail/flightDetail.wxss
+++ b/pages/index/flightDetail/flightDetail.wxss
@@ -84,21 +84,21 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 2.667rem;
-  line-height: 2.667rem;
-  font-size: 42rpx;
+  height: 2rem;
+  line-height: 2rem;
+  font-size: 50rpx;
 }
 
 .chooseCity .citySelect .hotelCity {
   width: 100%;
   border-bottom: 1rpx solid #F0EFF5;
-  color: #4A586A;
+
 }
 
 .chooseCity .citySelect .startCity {
   width: 6.187rem;
   border-bottom: 1rpx solid #F0EFF5;
-  color: #4A586A;
+
 }
 
 .chooseCity .citySelect .citySelect_img {
@@ -136,7 +136,7 @@
   width: 6.187rem;
   border-bottom: 1rpx solid #F0EFF5;
   text-align: right;
-  color: #4A586A;
+
 }
 
 .chooseDate {
@@ -259,7 +259,7 @@
   width: 3rem;
 }
 .smlabeldark {
-  color: #b2b1b1;
+  color: #005479;
   font-size: 26rpx;
   width: 3rem;
 }
@@ -306,4 +306,8 @@
   color: #cf4227;
   font-size: 33rpx;
   line-height: 1.3rem;
+}
+
+.nobottom{
+  border-bottom: none;
 }
