--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -28,62 +28,9 @@
         <view class="smlabel from">航班号</view>
       </view>
       <view class="citySelect">
-        <input placeholder="请输入航班号" type="text" name="userName" placeholder-style="color:#b2b1b1; font-size:0.9em;" />
+        <input placeholder="请输入航班号"  bindinput="flightNoInput" type="text" placeholder-style="color:#b2b1b1; font-size:0.9em;" />
       </view>
     </view>
-
-<!--     <view class="title">酒店</view>
-
-    <view class="chooseCity pd-70 pdt-0">
-  		<view class="citySelect">
-  			<view class="hotelCity" bindtap="selectCity">{{hotelCity}}</view>
-  		</view>
-
-      <view class="chooseDate">
-        <block>
-          <picker mode="date">
-            <view class="startDate">
-              <text class="date">9月8日</text>
-              <text class="week">周二出发</text>
-            </view>
-          </picker>
-        </block>
-        <block>
-          <picker mode="date">
-            <view class="endDate">
-              <text class="date">9月11日</text>
-              <text class="week">周五返回</text>
-            </view>
-          </picker>
-        </block>
-      </view>
-    </view>
-
-    <view class="title">人数</view>
-
-    <view class="person">
-      <view class="personNum">
-        <view class="text">成人</view>
-        <view class="outer">
-          <view class="minus" bindtap="minusAdultNum">—</view>
-          <view class="num">{{adultNum}}</view>
-          <view class="plus" bindtap="plusAdultNum">+</view>
-        </view>
-      </view>
-
-      <view class="personNum ml-30">
-        <view class="text">儿童</view>
-        <view class="outer">
-          <view class="minus" bindtap="minusChildNum">—</view>
-          <view class="num">{{childNum}}</view>
-          <view class="plus" bindtap="plusChildNum">+</view>
-        </view>
-      </view>
-      <view class="tishi">
-        <image src="../../images/tishi.png" class="tsimg"></image>
-      </view>
-
-    </view> -->
 
     <button class="sureBtn" bindtap="seatchFlight">查询航班</button>
 
