--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -15,11 +15,11 @@
         <view class="smlabeldark to">到达地</view>
       </view>
   		<view class="citySelect">
-  			<view class="startCity" >{{startCity}}</view>
+  			<view class="startCity destlabel" >{{startCity}}</view>
   			<view class="citySelect_img">
   				<image class="samll_plane" src="../../images/cxplan.png"></image>
   			</view>
-  			<view class="endCity" bindtap="selectCity">{{endCity}}</view>
+  			<view class="endCity destlabel" bindtap="selectCity">{{endCity}}</view>
   		</view>
     </view>
 
