--- a/components/cxmodal/cxmodal.wxml
+++ b/components/cxmodal/cxmodal.wxml
@@ -11,8 +11,8 @@
       </view>  
       <view class="modal-input">
         <view class="sendTxt">获取验证码</view>
-        <input placeholder-class="input-holder" type="number" maxlength="10" bindinput="inputChange" class="input" placeholder="请输入手机号"></input>
-        <input placeholder-class="input-holder" type="number" maxlength="10" bindinput="inputChange" class="input" placeholder="请输入验证码"></input>
+        <input placeholder-class="input-holder" type="number" maxlength="11" bindinput="inputChange" class="input" placeholder="请输入手机号"></input>
+        <input placeholder-class="input-holder" type="number" maxlength="10" bindinput="inputChange" class="input" placeholder="请输入验证码">{{verticode}}</input>
       </view>
     </view>
     <button class="sureBtn" data-status="confirm" bindtap="confirm">确定</button>
