--- a/pages/index/flightDetail/flightDetail.wxml
+++ b/pages/index/flightDetail/flightDetail.wxml
@@ -31,7 +31,7 @@
 			<view class="smlabeldark to">登机口</view>
 		</view>
 		<view class="citySelect">
-			<view class="smlabeldark from">{{flightInfo.ISLANDS}}</view>
+			<view class="smlabeldark from">{{realisland}}</view>
 			<view class="smlabeldark">{{flightInfo.COUNTERS}}</view>
 			<view class="smlabeldark to">{{flightInfo.GATES}}</view>
 		</view>
