--- a/components/cxmodal/cxmodal.wxml
+++ b/components/cxmodal/cxmodal.wxml
@@ -11,7 +11,7 @@
       </view>  
       <view class="modal-input">
         <view class="sendTxt" bindtap="getVertiCode">{{sendCount}}</view>
-        <input placeholder-class="input-holder" type="number" maxlength="11" bindinput="inputChange" class="input" placeholder="请输入手机号"></input>
+        <input placeholder-class="input-holder" type="number" maxlength="11" bindinput="inputChange" id="phoneNo" class="input" placeholder="请输入手机号" bindfocus="onFocus" value="{{phoneNo}}"></input>
         <input placeholder-class="input-holder" type="number" maxlength="10" bindinput="inputChange" class="input" placeholder="请输入验证码">{{verticode}}</input>
       </view>
     </view>
