--- a/pages/myCenter/myCenter.wxml
+++ b/pages/myCenter/myCenter.wxml
@@ -1,5 +1,7 @@
 <!--myCenter.wxml-->
 <view class="container">
+		<cxmodal id='cxmodal'>
+	</cxmodal>
   <view  bindtap="bindViewTap" class="userinfo">
     <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
     <text class="userinfo-nickname">{{userInfo.nickName}}</text>
@@ -7,4 +9,5 @@
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
+  <button class="sureBtn" bindtap="showCxmodal">测试按钮</button>
 </view>
