--- a/pages/switchcity/switchcity.wxml
+++ b/pages/switchcity/switchcity.wxml
@@ -31,8 +31,8 @@
     </view>
     <view class="selection" wx:for="{{cityList}}" wx:key="{{item.initial}}">
       <view class="item_letter"  id="{{item.initial}}">{{item.initial}}</view>
-      <view class="item_city"  wx:for="{{item.cityInfo}}" wx:for-item="ct" wx:key="{{ct.id}}" data-cityCode="{{ct.code}}" data-city="{{ct.city}}" bindtap="bindCity">
-        {{ct.city}}
+      <view class="item_city"  wx:for="{{item.cityInfo}}" wx:for-item="ct" wx:key="{{ct.dest}}" data-cityCode="{{ct.dest}}" data-city="{{ct.ARPT_BRIEF_C}}" bindtap="bindCity">
+        {{ct.ARPT_BRIEF_C}}
       </view>
     </view>
   </scroll-view>
